--- a/index.css
+++ b/index.css
@@ -4,32 +4,66 @@
     --badBlue: rgba(82,4,191,1);
     --darkBlue: rgba(18,6,75,1);
     --black: rgba(19,6,38,1);
-    --white: rgb(05,00,255,0.05);
+    --white: rgb(250,250,255,1);
 }
-
 *{
+    box-sizing: border-box;
+}
+body{
+    max-width: 1400px;
+    min-width: 1280px;
+    width: auto;
+    margin: 0 auto;
+}
+/* Header */
+.header {
+    position: sticky;
+    height: 110px;
+    top: 0px;
     background-color: var(--white);
-    margin: 0;
-    padding: 0;
+    border-radius: 25px;
+    box-shadow: 3px 3px 6px #ccc, -3px -3px 6px #fff;
 }
-.header{
-    width: 1400px;
-    height: 100px;
+.Title {
+    position: relative;
+    width: 245px;
+    top: 30px;
+    left: 55px;
 }
-h1 .Title{
-    position: absolute;
-    width: 190px;
-    height: 32px;
-    padding-top: 19px;
-    
+.EmailBtn {
+    position: relative;
+    width: 50px;
+    top: -65px;
+    left: 1px;
+} 
+#emailbutton{
+    background-color: transparent;
+    font-weight: semibold;
+    color: #444;
+    font-size: 1rem;
+    padding: 1rem 1.5rem;
+    border: 2px solid var(--white);
+    border-radius: .5rem;
+    cursor: pointer;
+    transition: all 300ms ease;
+    box-shadow: .5rem .5rem 1rem #ccc, -.5rem -.5rem 1rem #fff;
 }
-.presentation{
-    margin: 30px;
+#emailbutton:hover{
+    box-shadow: .5rem .5rem 1rem #fff, -.5rem -.5rem 1rem #ccc;
+}
+#emailbutton:active{
+    box-shadow: inset .2rem .2rem 1rem #fff, -.2rem -.2rem 1rem #ccc;
+    font-size: .8rem;
+}
+/* Body */
+.presentation {
+    margin: 150px;
     background-color: var(--purple);
 }
+/* Bottom */
 .socialNetworks {
-    width: max-content;
-    height: min-content;
+    width: 1400px;
+    height: 100px;
 }
 img {
     max-width: 100%;
