--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@200;400;700&family=Expletus+Sans:ital@1&display=swap');
+
+
 :root {
     --purple:  rgba(153, 15, 191, 1);
     --greatBlue: rgba(93,4,217,1);
@@ -5,15 +8,24 @@
     --darkBlue: rgba(18,6,75,1);
     --black: rgba(19,6,38,1);
     --white: rgb(250,250,255,1);
+    --width-var: 1400px;
 }
 *{
-    box-sizing: border-box;
+    box-sizing:content-box;
+    font-family: 'Big Shoulders Display', cursive;
+}
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
 body{
     max-width: 1400px;
     min-width: 1280px;
     width: auto;
     margin: 0 auto;
+    background-color: #8EC5FC;
+    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+    
 }
 /* Header */
 .header {
@@ -28,13 +40,13 @@ body{
     position: relative;
     width: 245px;
     top: 30px;
-    left: 55px;
+    left: 75px;
 }
 .EmailBtn {
     position: relative;
     width: 50px;
     top: -65px;
-    left: 1px;
+    left: 1100px;
 } 
 #emailbutton{
     background-color: transparent;
@@ -57,21 +69,43 @@ body{
 }
 /* Body */
 .presentation {
-    margin: 150px;
-    background-color: var(--purple);
+    margin: 30px auto;
+    width: 1400px;
+    height: 470px;
+    border-radius: 30px;
+    background-color: var(--white);
+    box-shadow: 10px 10px 16px #ccc, -3px -3px 30px #ccc;
+}
+.presentationText{
+    position: relative;
+    top: 110px;
+    left: 150px;
+}
+.present{
+    width: 400px;
+    font-size: 2rem;
+    font-family: 'Expletus Sans', cursive;
+}
+#description{
+    width: 570px;
+    font-family: 'Big Shoulders Display', cursive;
 }
 /* Bottom */
 .socialNetworks {
     width: 1400px;
     height: 100px;
 }
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
-.profileImg{
+.profileImg {
+    position: relative;
     width: 300px;
+    top: -200px;
+    left: 930px;
+
 }
+.profileImg > img{
+    border-radius: 20px;
+}
+
 .socialNetworkImg{
     width: 30px;
 }
