--- a/index.css
+++ b/index.css
@@ -7,12 +7,12 @@
     --darkBlue: rgba(18,6,75,1);
     --black: rgba(19,6,38,1);
     --white: rgb(250,250,255,1);
-    --width-var: 1400px;
 }
 
 *{
     box-sizing:content-box;
     font-family: 'Big Shoulders Display', cursive;
+    width: auto;
 }
 
 img {
@@ -22,11 +22,10 @@ img {
 
 body{
     max-width: 1400px;
-    min-width: 1280px;
     width: auto;
     margin: 0 auto;
     background-color: #8EC5FC;
-    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+    background-image: linear-gradient(75deg, #8EC5FC 0%, #E0C3FC 100%);
     
 }
 /* Header */
@@ -52,7 +51,8 @@ body{
 } 
 #emailbutton{
     background-color: transparent;
-    font-weight: semibold;
+    font-weight: 700;
+    width: 70px;
     color: #444;
     font-size: 1rem;
     padding: 1rem 1.5rem;
@@ -91,6 +91,27 @@ body{
 #description{
     width: 570px;
     font-family: 'Big Shoulders Display', cursive;
+}
+.projects{
+    margin: 30px auto;
+    width: 1400px;
+    height: 350px;
+    border-radius: 30px;
+    background-color: var(--white);
+    box-shadow: 10px 10px 16px #ccc, -3px -3px 30px #ccc;
+    display: inline-grid;
+    grid-gap: 10px;
+    grid-template-columns: 210px 300px 300px 300px 210px;
+    grid-auto-columns: 250px;
+}
+.projectIMG{
+    width: 270px;
+    height: 270px;
+    border-radius: 25px;
+}
+.repo{
+    width: 290px;
+    height: 220px;
 }
 /* Bottom */
 .socialNetworks {
