--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 :root {
     --purple:  rgba(153, 15, 191, 1);
     --greatBlue: rgba(93,4,217,1);
+    --skyBlue: #8EC5FC;
     --badBlue: rgba(82,4,191,1);
     --darkBlue: rgba(18,6,75,1);
     --black: rgba(19,6,38,1);
@@ -18,6 +19,9 @@
 img {
     max-width: 100%;
     max-height: 100%;
+}
+div{
+    overflow:;
 }
 
 body{
@@ -95,23 +99,42 @@ body{
 .projects{
     margin: 30px auto;
     width: 1400px;
-    height: 350px;
+    height: 380px;
     border-radius: 30px;
     background-color: var(--white);
     box-shadow: 10px 10px 16px #ccc, -3px -3px 30px #ccc;
     display: inline-grid;
-    grid-gap: 10px;
-    grid-template-columns: 210px 300px 300px 300px 210px;
+    grid-gap: 70px;
+    grid-template-columns: 215px 230px 230px 230px 215px;
     grid-auto-columns: 250px;
+    grid-row-gap: 18px;
+    grid-template-rows: 15% 65% 10%;
+    grid-row: 10 / 1;
 }
 .projectIMG{
-    width: 270px;
-    height: 270px;
-    border-radius: 25px;
+    align-content: center;
+    width: 200px;
+    height: 170px;
+    border-radius: 30px;
 }
-.repo{
-    width: 290px;
-    height: 220px;
+a > #mokepont #BasicPrograming #workTimeTable{
+    width: max-content;
+}
+.projects > #princTitle {
+    position: relative;
+    top: -15px;
+    left: 595px;
+    font-family: 'Expletus Sans', cursive;
+    font-weight: 500;
+    font-size: xx-large;
+}
+.repo {
+    background-color: transparent;
+    box-shadow: .5rem .5rem .5rem #ccc;
+    position: relative;
+    width: 230px;
+    height: 140px;
+    top: 80px;
 }
 /* Bottom */
 .socialNetworks {
