--- a/index.css
+++ b/index.css
@@ -1,6 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Marck+Script&family=Roboto&display=swap');
 
 /* Basic styling */
+:root{
+--fiery-rose: rgba(236, 92, 102, 0.9);
+--misty-rose: rgba(255, 217, 211,0.9);
+--like-fiery-rose: rgba(254, 104, 146, 0.9);
+--like-misty-rose: rgba(213, 143, 212, 0.9);
+--magenta-dye: rgba(185, 28, 109, 0.9);
+--powder-blue: rgba(182, 226, 222, 0.9);
+--rhythm: rgba(111, 121, 172, 0.9);
+}
 * {
     box-sizing: border-box;
     margin: 0;
@@ -11,64 +20,60 @@ html {
 }
 
 body {
+    background: linear-gradient(90deg, hsla(331, 78%, 69%, 1) 0%, rgb(255, 217, 211) 100%);
     font-family: "Roboto", sans-serif;
     font-size: 1.2rem;
     min-height: 100%;
+    padding: 10px 20px 20px 10px;
 }
 
 .grid-container > * {
-    box-shadow: 1px 1px 7px 0px rgba(0, 0, 0, 0.75);
-    border-radius: 3px;
-    padding: 10px;
+    box-shadow: 1px 1px 7px 0px rgba(185, 28, 109, 0.15);
+    border-radius: 8px;
+    padding: 0px;
     align-items: center;
 }
 
 .header {
     grid-area: header;
-    background-color: aqua;
+    width: 100%;
+    background-color: var(--magenta-dye);
 }
-
-.navbar {
-    grid-area: navbar;
-    background-color: blueviolet;
-}
-
-.sidebar {
-    grid-area: sidebar;
-    background-color: tomato;
-}
-
 .main {
     grid-area: main;
-    background-color: chocolate;
+    background-color: var(--misty-rose);
 }
-
+.sidebar {
+    grid-area: sidebar;
+    background-color: var(--magenta-dye);
+}
 .footer{
     grid-area:footer;
-    background-color: violet;
+    background-color: var(--rhythm);
 }
 
 .grid-container {
     display: grid;
     gap: 10px;
-    grid-template: 
-        "header" 70px
-        "navbar" 30px
-        "main" auto
-        "sidebar" 160px
-        "footer" 70px;
+    grid-template-columns:  100%;
+    grid-template-rows: 100px auto 70px 130px;
+    grid-template-areas: 
+        "header"
+        "main"
+        "sidebar"
+        "footer";
 }
+
 /* header */
 .div-logo{
-    position: relative;
-    top: -10px;
     display: grid;
-    grid-template-columns: 120px auto;
-    grid-template-rows: 45px 25px;
+    width: 100%;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 45px 25px 30px;
     grid-template-areas: 
     "logo  Isologo"
-    "logo  slogan";
-    align-items: center;
+    "logo  slogan"
+    "navbar navbar";
 }
 .div-logo > img {
     grid-area: logo;
@@ -78,14 +83,14 @@ body {
 }
 .div-logo > img:hover {
     cursor: pointer;
-    filter: drop-shadow(.15rem .15rem 3px #ccc);
+    filter: drop-shadow(.15rem .15rem 3px var(--fiery-rose));
     transition: filter 250ms;
 }
 .div-logo > img:not(hover) {
     transition: filter 300ms;
 }
-
 .h1 {
+    color: var(--like-fiery-rose);
     grid-area: Isologo;
     font-family: 'Marck Script', cursive;
     position: relative;
@@ -94,27 +99,39 @@ body {
     padding-left: 0px;
 }
 .h3 {
+    color: var(--like-misty-rose);
     grid-area: slogan;
     font-family: 'Courgette', cursive;
     font-size: 80%;
     font-weight: 200;
     padding-left: 10px;
 }
-
-.nav {
-    display: flex;/*
-    flex-direction: row;*/
+.navbar {
+    grid-area: navbar;
+}
+.nav{
+    display: flex;
+    justify-content: space-between;
     list-style-type: none;
-    list-style-position: inside;
-    justify-content: center;
-    width: auto;
-    padding: 0px 50px 0px 0px;
+    width: 80%;
+    padding-left: 15%;
+}
+.nav-link{
+    color: var(--powder-blue);
+    text-decoration: none;
+}
+.nav-link:hover{
+    text-shadow: 0px 0px 5px var(--misty-rose);
+    transition: 0.5s;
+}
+.nav-link:not(hover){
+    transition: 250ms;
 }
 
 /* Media Mobile 
 @media (min-width: 600px) {
     .grid-container{
-        grid-template-columns: 200px auto;
+        grid-template-columns: 200px auto;``
         grid-template-rows: 100px 50px auto 100px;
         grid-template-areas: 
         "header  header"
