--- a/index.css
+++ b/index.css
@@ -3,9 +3,9 @@
 /* Basic styling */
 :root{
 --fiery-rose: rgba(236, 92, 102, 0.9);
---misty-rose: rgba(255, 217, 211,0.9);
---like-fiery-rose: rgba(254, 104, 146, 0.9);
---like-misty-rose: rgba(213, 143, 212, 0.9);
+--misty-rose: #ffd9d3e6;
+--like-fiery-rose: #fe6892e6;
+--like-misty-rose: #d58fd4e6;
 --magenta-dye: rgba(185, 28, 109, 0.9);
 --powder-blue: rgba(182, 226, 222, 0.9);
 --rhythm: rgba(111, 121, 172, 0.9);
@@ -13,24 +13,23 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
 }
 html {
+    width: 100%;
     height: 100%;
 }
 
 body {
-    background: linear-gradient(90deg, hsla(331, 78%, 69%, 1) 0%, rgb(255, 217, 211) 100%);
+    background: linear-gradient(180deg, var(--like-fiery-rose) 60%, var(--like-misty-rose) 80%, var(--misty-rose) 100%);
     font-family: "Roboto", sans-serif;
-    font-size: 1.2rem;
-    min-height: 100%;
+    font-size: 1rem;
     padding: 10px 20px 20px 10px;
 }
 
 .grid-container > * {
     box-shadow: 1px 1px 7px 0px rgba(185, 28, 109, 0.15);
+
     border-radius: 8px;
-    padding: 0px;
     align-items: center;
 }
 
@@ -41,20 +40,24 @@ body {
 }
 .main {
     grid-area: main;
+    width: 100%;
     background-color: var(--misty-rose);
 }
 .sidebar {
     grid-area: sidebar;
+    width: 100%;
     background-color: var(--magenta-dye);
 }
 .footer{
     grid-area:footer;
+    width: 100%;
     background-color: var(--rhythm);
 }
 
 .grid-container {
     display: grid;
-    gap: 10px;
+    gap: 5px;
+    padding-right: 5px;
     grid-template-columns:  100%;
     grid-template-rows: 100px auto 70px 130px;
     grid-template-areas: 
@@ -128,69 +131,228 @@ body {
     transition: 250ms;
 }
 
-/* Media Mobile 
-@media (min-width: 600px) {
-    .grid-container{
-        grid-template-columns: 200px auto;``
-        grid-template-rows: 100px 50px auto 100px;
-        grid-template-areas: 
-        "header  header"
-        "navbar  navbar"
-        "sidebar main"
-        "footer  footer";
-    }
-    */
-    /* Logo 
+/* Media Mobile */ 
+@media (min-width: 300px) {
+    
+/* header mobile min 300px a 450px*/
+.div-logo{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 45px 25px 30px;
+    grid-template-areas: 
+    "logo  Isologo"
+    "logo  slogan"
+    "navbar navbar";
+}
+.div-logo > img {
+    grid-area: logo;
+    position: relative;
+    height: 55px;
+    left: 15px;
+    top: 12px;
+}
+.div-logo > img:hover {
+    cursor: pointer;
+    filter: drop-shadow(.15rem .15rem 3px var(--fiery-rose));
+    transition: filter 250ms;
+}
+.div-logo > img:not(hover) {
+    transition: filter 300ms;
+}
+.h1 {
+    color: var(--like-fiery-rose);
+    grid-area: Isologo;
+    font-family: 'Marck Script', cursive;
+    position: relative;
+    font-size: 115%;
+    font-weight: 700;
+    padding-left: 5px;
+}
+.h3 {
+    color: var(--like-misty-rose);
+    grid-area: slogan;
+    font-family: 'Courgette', cursive;
+    font-size: 70%;
+    font-weight: 200;
+    padding-left: 10px;
+}
+.navbar {
+    grid-area: navbar;
+}
+.nav{
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    width: 90%;
+    padding-left: 10%;
+}
+.nav-link{
+    color: var(--powder-blue);
+    font-size: 80%;
+    text-decoration: none;
+}
+.nav-link:hover{
+    text-shadow: 0px 0px 5px var(--misty-rose);
+    transition: 0.5s;
+}
+.nav-link:not(hover){
+    transition: 250ms;
+}
+    
+}
+/* Media Mobile */ 
+@media (min-width: 450px) {
+    
+    /* header mobile min 450px a 900px*/
     .div-logo{
         display: grid;
-        grid-template-columns: 300px;
-        grid-template-rows: 110px;
-        grid-template: 
-        "logo  Isologo" 
-        "logo  slogan"  ;
-        align-items: center;
+        width: 100%;
+        grid-template-columns: 30% 70%;
+        grid-template-rows: 45px 25px 30px;
+        grid-template-areas: 
+        "logo  Isologo"
+        "logo  slogan"
+        "navbar navbar";
     }
     .div-logo > img {
         grid-area: logo;
         position: relative;
-        width: auto;
-        height: 90px;
-        left: 35px;
+        height: 65px;
+        left: 15px;
+        top: 5px;
     }
-    
+    .div-logo > img:hover {
+        cursor: pointer;
+        filter: drop-shadow(.15rem .15rem 3px var(--fiery-rose));
+        transition: filter 250ms;
+    }
+    .div-logo > img:not(hover) {
+        transition: filter 300ms;
+    }
     .h1 {
+        color: var(--like-fiery-rose);
         grid-area: Isologo;
-        font-size: 40px;
+        font-family: 'Marck Script', cursive;
+        position: relative;
+        font-size: 200%;
+        font-weight: 700;
+        padding-left: 5px;
     }
     .h3 {
+        color: var(--like-misty-rose);
         grid-area: slogan;
-        font-size: 22px;
+        font-family: 'Courgette', cursive;
+        font-size: 100%;
+        font-weight: 200;
+        padding-left: 15px;
     }
-    
-}
-*/
-
-/* Media Tablet 
-
-@media (min-width: 900px) {
-    .grid-container{
-        grid-template-columns: 500px auto;
-        grid-template-rows: 100px 50px auto auto 100px;
-        grid-template-areas: 
-        "header  header   header"
-        "main    main     navbar"
-        "main    main     navbar"
-        "main    main     sidebar"
-        "footer  footer   footer";
+    .navbar {
+        grid-area: navbar;
     }
-    
-    .div-logo{
+    .nav{
         display: flex;
+        justify-content: space-between;
+        list-style-type: none;
+        width: 80%;
+        padding-left: 20%;
+    }
+    .nav-link{
+        color: var(--powder-blue);
+        font-size: 90%;
+        text-decoration: none;
+    }
+    .nav-link:hover{
+        text-shadow: 0px 0px 5px var(--misty-rose);
+        transition: 0.5s;
+    }
+    .nav-link:not(hover){
+        transition: 250ms;
+    }
+        
+    }
+
+    /* Media Mobile */ 
+@media (min-width: 900px) {
+    .grid-container {
+        display: grid;
+        gap: 5px;
+        padding-right: 5px;
+        grid-template-columns:  100%;
+        grid-template-rows: 120px auto 100px 130px;
+        grid-template-areas: 
+            "header"
+            "main"
+            "sidebar"
+            "footer";
+    }
+    
+    /* header mobile min 600px*/
+    .div-logo{
+        display: grid;
+        width: 100%;
+        grid-template-columns: 20% 60% 20%;
+        grid-template-rows: 60px 30px 40px;
+        grid-template-areas: 
+        "logo  Isologo  navbar"
+        "logo  slogan   navbar"
+        "logo  slogan   navbar";
     }
     .div-logo > img {
-        width: 90px;
-        height: fit-content;
+        grid-area: logo;
+        position: relative;
+        height: 80%;
+        left: 80px;
+        top: 8px;
     }
-}
-    */
-    /* TODO: estilizar para tabletas y desktop*/
+    .div-logo > img:hover {
+        cursor: pointer;
+        filter: drop-shadow(.15rem .15rem 3px var(--fiery-rose));
+        transition: filter 250ms;
+    }
+    .div-logo > img:not(hover) {
+        transition: filter 300ms;
+    }
+    .h1 {
+        color: var(--like-fiery-rose);
+        grid-area: Isologo;
+        font-family: 'Marck Script', cursive;
+        top: 5%;
+        left: 25%;
+        font-size: 400%;
+        font-weight: 700;
+    }
+    .h3 {
+        color: var(--like-misty-rose);
+        grid-area: slogan;
+        font-family: 'Courgette', cursive;
+        font-size: 230%;
+        font-weight: 200;
+        position: relative;
+        top: 15px;
+        left: 20%;
+    }
+    .navbar {
+        grid-area: navbar;
+    }
+    .nav{
+        display: block;
+        list-style-type: none;
+        padding: 0;
+    }
+    .nav-link{
+        color: var(--powder-blue);
+        font-size: 100%;
+        position: relative;
+        top: 10px;
+        text-decoration: none;
+    }
+    .nav-link:hover{
+        text-shadow: 0px 0px 5px var(--misty-rose);
+        transition: 0.5s;
+    }
+    .nav-link:not(hover){
+        transition: 250ms;
+    }
+        
+    }
